Spring Project sb -> @ConfigurationProperties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,17 +2,17 @@ service.port=8081
 com.sda.zoo.zoo-name=MojeZoo
 com.sda.zoo.zoo-owner=ja
 com.sda.zoo.zoo-address=Gdañœk ul Sopocka
-#Nie mo¿na dupilkowaæ kluczy, ale mo¿na wyró¿niæ poprzez nawiazy[]
+#Nie mo¿na dupilkowaæ kluczy, ale mo¿na wyró¿niæ poprzez nawiasy[] - mo¿na zczytaæ todo listy
 com.sda.teacher[0]=Adam
 com.sda.teacher[1]=Mariusz
 #Mo¿na te¿ zrobiæ mapê i wtedy pomarañczowe to klucz a zielone wartoœæ.
 com.sda.object.klucze=kluczDoSaliD 
 com.sda.object.krzes³o=Krzes³oZSaliD
 
-com.sda.tel[0] = 563214789
-com.sda.tel[1] = 541236987
+com.sda.zoo.tel[0] = 563214789
+com.sda.zoo.tel[1] = 541236987
 
-com.sda.pn=8-16
-com.sda.wt=9-16
+com.sda.zoo.open-hours.pn=8-16
+com.sda.zoo.open-hours.wt=9-16
 
 
